--- a/client/src/theme/global.css
+++ b/client/src/theme/global.css
@@ -56,10 +56,17 @@
   padding: 0;
 }
 
-html, body, #root {
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+#root {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
